<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ObjetPret</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_inscription">Inscription</string>
    <string name="title_activity_choisir_objet">Choisir un objet</string>
    <string name="title_activity_ajouter_objet">Ajouter un objet</string>
    <string name="title_activity_retirer_objet">Retirer un objet</string>
    <string name="title_activity_rechercher_objet">Rechercher un objet</string>
    <string name="title_activity_demande_pret">Demandes de prêts</string>
    <string name="title_activity_modifier_profil">Modifier mon profil</string>
    <string name="title_activity_evaluation">Evaluation</string>
    <string name="title_activity_disponibilite_objet">Disponibilite d\'un objet</string>
    <string name="title_activity_confirmer_emprunt">Confirmer l\'emprunt</string>
    <string name="title_activity_confirmer_retour">Confirmer le retour</string>
    <string name="button_inscription">Inscription</string>
    <string name="button_choisir_objet">Choisir</string>
    <string name="button_ajouter_objet">Ajouter</string>
    <string name="button_retirer_objet">Retirer</string>
    <string name="button_rechercher_objet">Rechercher</string>
    <string name="button_demande_pret">Demander</string>
    <string name="button_modifier_profil">Profil</string>
    <string name="button_evaluation">Evaluer</string>
    <string name="button_disponibilite_objet">Disponibilite</string>
    <string name="button_confirmer_emprunt">Confirmer</string>
    <string name="button_confirmer_retour">Retourner</string>
    <string name="label_nom">Nom</string>
    <string name="label_description">Description</string>
    <string name="label_debut_emprunt">Debut emprunt</string>
    <string name="label_fin_emprunt">Fin emprunt</string>
    <string name="button_valider_disponibilite">Valider disponibilite</string>
    <string name="button_reserver">Reserver</string>
    <string name="button_annuler">Annuler</string>
    <string name="label_date_par_defaut">AAAA/MM/JJ</string>
    <string name="message_date_de_debut_invalide">La date de debut ne dois pas depasser la date de fin.</string>
    <string name="message_date_manquante">Vous devez choisir la date de debut et la date de fin.</string>
    <string name="message_date_debut_passe">La date de debut doit etre dans le futur.</string>
    <string name="message_objet_disponible">L\'objet est disponible pour les dates choisies.</string>
    <string name="message_objet_non_disponible">L\'objet n\'est pas disponible pour les dates choisies.</string>
    <string name="button_select_all">Tout selectionner </string>
    <string name="ButtonRetour">Retour</string>
    <string name="button_login">Login</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="label_username">Username:</string>
    <string name="label_password">Password:</string>
	<string name="button_cancel">Cancel</string>
	<string name="text_login_failed">Le login n\'a pas reussi.</string>
	
	<string name="inscription_nom">Nom</string>
    <string name="incription_courriel">Courriel</string>
    <string name="inscription_motdepasse">Entrez un mot de passe</string>
    <string name="inscription_retapermotdepasse">Retapez le mot de passe</string>
    <string name="inscription_dixhuitplus">Je confirme avoir plus de 18 ans</string>
    <string name="inscription_sinscrire">S\'inscrire</string>
    <string name="inscription_annuler">Annuler</string>
    <string name="inscription_informations">Entrez les informations suivantes</string>
    <string name="inscription_inscription">Inscription</string>
    <string name="inscriptionnomutilisateur">Nomd\'utilisateur</string>
    <string name="inscriptionnomutil">Nom d\'utilisateur</string>
    <string name="inscriptionnomu">Nom d\'utilisateur</string>
    <string name="inscnomutilisateur">Nom d\'utilisateur</string>
    <string name="inscrpnom">Nom</string>
    <string name="inscrpcourriel">Courriel</string>
    <string name="inscrpmotdepasse">Mot de passe</string>
    <string name="inscrprepetmotdepasse">Confirmez le mot de passe</string>
    
    <string name = "title_recherche_par_mots_cles">Recherche par mots cles</string>
    <string name = "label_voici_la_liste">Voici la liste d\'objets qui correspond a votre demande:</string>
    <string name = "button_choisir">CHOISIR</string>
    <string name="bouton_chercher">Chercher</string>
    <string name="button_accepter">Accepter</string>
    <string name="button_refuser">Refuser</string>
    
    <string name="info_nom_emprunteur">Nom de l\'emprunteur:</string>
    <string name="info_nom_objet">Nom de l\'objet:</string>
    <string name="info_cote_emprunteur">Cote de l\'emprunteur:</string>
    <string name="info_date">Date:</string>
    <string name="info_duree">Durée:</string>
    <string name="info_description">Description de l\'objet:</string>
    <string name="demande_accept">Demande Acceptée</string>
    <string name="demande_refuse">Demande Refusée</string>
    <string name="demande_retour">Aucune Action</string>
    <string name="accepter">Accepter</string>
    <string name="refuser">Refuser</string>
    <string name="pas_reponse">Pas de Réponse</string>
    
    <string name="message_doit_etre_connecte">Vous devez être connecté pour effectué cette opération</string>
    
	
</resources>
