<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/listviewcontentlayout"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="4dip" >
    
    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
	>
    <TextView
        android:id="@+id/info_objet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="4dip"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/info_nom_objet"/>
    <TextView
        android:id="@+id/objet"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="" />
    </LinearLayout>
    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
	>
    <TextView
        android:id="@+id/info_emprunteur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:paddingRight="4dip"
        android:text="@string/info_nom_emprunteur"/>
    <TextView
        android:id="@+id/emprunteur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="" />
    </LinearLayout>
    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
	>
    <TextView
        android:id="@+id/info_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="4dip"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/info_date"/>
    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="" />
    </LinearLayout>
     <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
	>
    <TextView
        android:id="@+id/info_duree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="4dip"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/info_duree"/>
    <TextView
        android:id="@+id/duree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="" />
    </LinearLayout>
     <TextView
        android:id="@+id/info_cote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/info_cote_emprunteur" />
    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <RatingBar
        android:id="@+id/cote"
        android:isIndicator="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
	 </LinearLayout>
	<TextView
        android:id="@+id/info_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/info_description" />
	<TextView
	    android:id="@+id/description"
	    android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="" />
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:gravity="bottom|center"
	    android:orientation="horizontal" >

    <Button
        android:id="@+id/accepter_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accepter" 
        android:onClick="buttonClick"/>

    <Button
        android:id="@+id/refuser_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/refuser"
        android:onClick="buttonClick"/>

    <Button
        android:id="@+id/retourner_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_confirmer_retour"
         android:onClick="buttonClick"/>
	</LinearLayout>
</LinearLayout>