<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	android:padding="4dip"
	android:id="@+id/listviewcontentlayout">
    
    
    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
	>
    <TextView
        android:id="@+id/info_objet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="4dip"
        android:text="@string/info_nom_objet"/>
    <TextView
        android:id="@+id/objet"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="" />
    </LinearLayout>
    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
	>
    <TextView
        android:id="@+id/info_emprunteur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="4dip"
        android:text="@string/info_nom_emprunteur"/>
    <TextView
        android:id="@+id/emprunteur"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="" />
    </LinearLayout>
    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
	>
    <TextView
        android:id="@+id/info_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="4dip"
        android:text="@string/info_date"/>
    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="" />
    </LinearLayout>
    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <RatingBar
        android:id="@+id/cote"
        android:isIndicator="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
	 </LinearLayout>
</LinearLayout>